# Clipline

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/clipline/: Cargo.toml
crates/clipline-core/: Cargo.toml
crates/clipline-core/src/: adapter.rs  bridge_tests.rs  driver.rs  error.rs  head.rs  lib.rs  mock.rs  protocol.rs  serve.rs  transfer.rs  wire.rs
crates/clipline-core/src/mesh/: bulk.rs  mod.rs  peer.rs  tls.rs
crates/clipline-core/tests/: abort.rs  bulk_fetch.rs  lazy_paste.rs  mesh_connect.rs  offer_promise.rs  origin_serve.rs
crates/clipline/src/: main.rs
crates/clipline/src/platform/: codec.rs  mod.rs  windows.rs
docs/: ARCHITECTURE.md  CLAUDE.md  CONVENTIONS.md  M3-MANUAL-GATE.md  PLAN.md  PLATFORM-NOTES.md  SPEC.md  TEST.md
m0-spike/: Cargo.toml
m0-spike/src/: main.rs
m0b-spike/: Cargo.toml
m0b-spike/src/: main.rs
