[workspace]
members = ["crates/clipline-core", "crates/clipline"]
resolver = "2"

# Single static binary per platform (CONVENTIONS.md): optimize the release build.
# (No Vox-style per-package dev override here — Clipline has no bundled C deps.)
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# Strip symbols/debuginfo from the distributed binary — smaller, and nothing consumes them
# in a shipped clipline.exe (P1-B). Debug builds keep symbols.
strip = true
