[package]
name = "m0-spike"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["rt-multi-thread", "time", "macros", "sync"] }
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_System_Ole", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_UI_Shell", "Win32_Graphics_Gdi", "Win32_System_Threading"] }
# Direct dep so the `#[implement]` macro's `windows_core::` paths resolve.
windows-core = "0.62"
